MDEV-486 LP BUG#1010116 fix.

Link view/derived table fields to a real table to check turning the table record to null row.

Item_direct_view_ref wrapper now checks if table is turned to null row.